log
Mon 10 Apr 2023 09:16:28 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:22: error: expected expression before ‘HashMap’
   56 |   HashMap* nuevo = (*HashMap) calloc(1, sizeof(HashMap));
      |                      ^~~~~~~
hashmap.c:56:31: error: expected ‘,’ or ‘;’ before ‘calloc’
   56 |   HashMap* nuevo = (*HashMap) calloc(1, sizeof(HashMap));
      |                               ^~~~~~
hashmap.c:58:23: error: expected expression before ‘Pair’
   58 |   nuevo->buckets = (**Pair) calloc(capacity, sizeof(HashMap));
      |                       ^~~~
hashmap.c:58:28: error: expected ‘;’ before ‘calloc’
   58 |   nuevo->buckets = (**Pair) calloc(capacity, sizeof(HashMap));
      |                            ^~~~~~~
      |                            ;
Compilation failed
c5ab2f6
Mon 10 Apr 2023 09:17:08 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2919c80
Mon 10 Apr 2023 09:28:56 PM UTC: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bukets’; did you mean ‘buckets’?
   48 |     map->bukets+newPos = createPair(key, value);
      |          ^~~~~~
      |          buckets
hashmap.c:53:17: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bukets’; did you mean ‘buckets’?
   53 |         if(map->bukets+it ==  NULL){
      |                 ^~~~~~
      |                 buckets
hashmap.c:54:16: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bukets’; did you mean ‘buckets’?
   54 |           map->bukets+it = createPair(key, value);
      |                ^~~~~~
      |                buckets
hashmap.c:60:3: error: ‘size’ undeclared (first use in this function)
   60 |   size++;
      |   ^~~~
hashmap.c:60:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d35c176
